# habitat-injection

./: CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  DELIBERATION_PLAN.md  EXECUTION_PLAN.md  GAP_ANALYSIS.md  HEBBIAN_BUOY_GAP_ANALYSIS.md  HEBBIAN_BUOY_PERFECTION_PLAN.md  MASTERPLAN.md  NA_GAP_ANALYSIS.md  PLAN.md  README.md  WATCHER_COMPLETION_ASSESSMENT.md  WATCHER_HARDENING_PLAN_S224.md  WATCHER_REMEDIATION_PLAN.md  bacon.toml  plan.toml
.claude/: anti_patterns.json  context.json  patterns.json
ai_docs/: ARCHITECTURE_DEEP_DIVE.md  CODE_MODULE_MAP.md  DEPLOYMENT_GUIDE.md  ERROR_TAXONOMY.md  INDEX.md  MESSAGE_FLOWS.md  ONBOARDING.md  PERFORMANCE.md  QUICKSTART.md  STATE_MACHINES.md
ai_docs/modules/: L1_FOUNDATION.md  L2_SCHEMA_&_PERSISTENCE.md  L3_INJECTION_ENGINE.md  L4_CONSOLIDATION_ENGINE.md  L5_QUERY_&_BROWSER.md  L6_SPACETIMEDB_MIGRATION.md
ai_specs/: API_SPEC.md  CONSENT_SPEC.md  DATABASE_SPEC.md  DESIGN_CONSTRAINTS.md  EVENT_SYSTEM_SPEC.md  INDEX.md  IPC_BUS_SPEC.md  MODULE_MATRIX.md  SECURITY_SPEC.md  WIRE_PROTOCOL_SPEC.md
ai_specs/layers/: L1_FOUNDATION_SPEC.md  L2_SCHEMA_&_PERSISTENCE_SPEC.md  L3_INJECTION_ENGINE_SPEC.md  L4_CONSOLIDATION_ENGINE_SPEC.md  L5_QUERY_&_BROWSER_SPEC.md  L6_SPACETIMEDB_MIGRATION_SPEC.md
ai_specs/patterns/: ANTIPATTERNS.md  ASYNC_PATTERNS.md  BRIDGE_PATTERNS.md  CONCURRENCY_PATTERNS.md  ERROR_PATTERNS.md  INDEX.md  IPC_PATTERNS.md  RUST_CORE_PATTERNS.md
config/: default.toml  devenv-service.toml  production.toml
habitat-injection-vault/: Architecture Overview.md  Execution Plan.md  Executive Summary.md  HOME.md  Implementation Status.md  MASTER INDEX.md  Module Index.md  SpaceTimeDB Plan.md  Watcher Remediation Plan S185.md
habitat-injection-vault/.obsidian/: app.json  graph.json  workspace.json
habitat-injection-vault/architecture/: Consent Model.md  Data Flow.md  Dependency Graph.md  Hebbian Learning.md
habitat-injection-vault/layers/: L1 Foundation.md  L2 Schema & Persistence.md  L3 Injection Engine.md  L4 Consolidation Engine.md  L5 Query & Browser.md  L6 SpaceTimeDB Migration.md
habitat-injection-vault/modules/: Gold Standard Exemplars.md
habitat-injection-vault/operations/: Binary Map.md  CLI Tool Ecosystem.md  Deliberation Record.md  Diagnostics Runbook.md  Fidelity Tuning Guide.md  Habitat Assimilation Guide.md  Hook Registration.md  Injection Database State.md  Quality Gate Protocol.md  System Verification Report.md
habitat-injection-vault/schematics/: API Endpoints Map.md  CLI Binary Architecture.md  Complete Wiring Schematic.md  Deployment Checklist.md  Hebbian Lifecycle Wiring.md  Injection Payload Format.md  Injection Pipeline.md  STDB Phase 2 Wiring.md  Schema Diagram.md  Three-Tier Fallback.md  Tool Chain Patterns.md
memory-injection-vault/: Bootstrap Chain — Current vs Target.md  Current State — Memory Substrates.md  DEPLOYMENT FRAMEWORK.md  Executive Summary.md  HOME.md  Luke ScratchPad-memory-injection-vault.md  MASTER INDEX.md  Migration Strategy.md  Reducers.md  Risk Register.md  Session Estimates.md  Success Criteria.md  What Replaces vs Preserves.md
memory-injection-vault/.obsidian/: workspace.json
memory-injection-vault/architecture/: Comms Layer v3 Alignment.md  Ingester Pipeline.md  Injector — Context Window Bootstrap.md  Sidecar Architecture.md
memory-injection-vault/deliberation/: ARGUMENT-ALPHA-BotRight.md  ARGUMENT-ALPHA-Left.md  ARGUMENT-ALPHA-TopRight.md  ARGUMENT-BETA-BotRight.md  ARGUMENT-BETA-Left.md  ARGUMENT-GAMMA-BotRight.md  ARGUMENT-GAMMA-Left.md  ARGUMENT-GAMMA-TopRight.md  CONTEXT.md  FINAL-ALPHA-BotRight.md  FINAL-ALPHA-Left.md  FINAL-ALPHA-TopRight.md  FINAL-BETA-BotRight.md  FINAL-BETA-Left.md  FINAL-Command-2.md  FINAL-Command-3.md  FINAL-GAMMA-BotRight.md  FINAL-GAMMA-TopRight.md  PERSONA-ALPHA-BotRight.md  PERSONA-ALPHA-Left.md  PERSONA-ALPHA-TopRight.md  PERSONA-BETA-BotRight.md  PERSONA-BETA-Left.md  PERSONA-BETA-TopRight.md  PERSONA-Command-2.md  PERSONA-GAMMA-BotRight.md  PERSONA-GAMMA-Left.md  PERSONA-GAMMA-TopRight.md  ROUND2-ALPHA-BotRight.md  ROUND2-ALPHA-Left.md  ROUND2-ALPHA-TopRight.md  ROUND2-BETA-BotRight.md  ROUND2-BETA-Left.md  ROUND2-Command-2.md  ROUND2-GAMMA-BotRight.md  ROUND2-GAMMA-Left.md  ROUND2-GAMMA-TopRight.md  ROUND3-ALPHA-BotRight.md  ROUND3-ALPHA-Left.md  ROUND3-ALPHA-TopRight.md  (+7 more)
memory-injection-vault/gaps/: Gap Analysis — Conventional.md  Gap Analysis — Non-Anthropocentric.md  Recommendations Summary.md
memory-injection-vault/phases/: Phase A — STDB Deploy.md  Phase B — Knowledge Graph Migration.md  Phase C — Watcher + Causal Chains.md  Phase D — Cross-Service Integration.md  Phase E — Bootstrap Revolution.md
memory-injection-vault/schemas/: T1 — HabitatEvent.md  T2 — KnowledgeEdge.md  T3 — GradientSnapshot.md  T4 — SessionRecord.md  (+5 more)
schematics/: API_MAP.md  CLI_BINARY_ARCHITECTURE.md  DATA_FLOW.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FLOW.md  INDEX.md  IPC_PROTOCOL.md  LAYER_DEPENDENCIES.md  STATE_TRANSITIONS.md
src/: lib.rs
(+57 files in other folders)
