[package]
name = "habitat-injection"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Memory injection system for Claude Code — <2KB causal state in <100ms at session start. Deliberated by 10 CC instances across 4 rounds. SQLite Phase 1, SpaceTimeDB Phase 2."
authors = ["Luke O'Mahoney <lukeomahoney@gmail.com> (node 0.A)", "Claude (cortex) — Orchestrator + Synthesizer", "Memory Scientist (ALPHA-Left)", "CLI Craftsman (ALPHA-TopRight)", "Substrate Guardian (ALPHA-BotRight)", "Practitioner (BETA-Left)", "Historian (BETA-BotRight)", "Security Architect (GAMMA-Left)", "Performance Engineer (GAMMA-TopRight)", "The Watcher (GAMMA-BotRight)", "Adversary (Command-2)"]
license = "proprietary"

[[bin]]
name = "habitat-injection"
path = "src/bin/main.rs"

[[bin]]
name = "habitat-init"
path = "src/bin/habitat_init.rs"

[[bin]]
name = "habitat-inject"
path = "src/bin/habitat_inject.rs"

[[bin]]
name = "habitat-consolidate"
path = "src/bin/habitat_consolidate.rs"

[[bin]]
name = "habitat-query"
path = "src/bin/habitat_query.rs"

[[bin]]
name = "habitat-seed"
path = "src/bin/habitat_seed.rs"

[[bin]]
name = "habitat-memory"
path = "src/bin/habitat_memory.rs"

[[bin]]
name = "habitat-backup"
path = "src/bin/habitat_backup.rs"

[workspace]

[dependencies]
axum = { version = "0.8", features = ["json"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"], optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
rusqlite = { version = "0.32", features = ["bundled", "backup"], optional = true }
ureq = { version = "2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spacetimedb-sdk = { version = "2.1", optional = true }
toml = "0.8"
thiserror = "2"
tokio = { version = "1.35", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7", "serde"] }
habitat-buoy = { path = "../habitat-buoy", optional = true }

[features]
cli = ["clap"]
default = ["sqlite", "cli"]
full = ["sqlite", "cli", "stdb", "ingester", "watcher-digest", "inhibition", "substrate-reciprocal"]
ingester = ["stdb", "tokio", "reqwest", "axum", "tower-http"]
inhibition = []
sqlite = ["rusqlite", "habitat-buoy"]
stdb = ["spacetimedb-sdk", "tokio", "reqwest"]
substrate-reciprocal = ["reqwest"]
watcher-digest = ["stdb"]

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
